--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,10 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-dark bg-dark px-5">
+       <a class="navbar-brand" href="#">ChatGPT Test App</a>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
