--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,11 +19,15 @@
     </div>
     <div class="mb-4">
       <%= f.label :essay_question, class: "form-label" %>
-      <%= f.text_field :essay_question, value: @essay_question, class: "form-control" %>
+      <%= f.text_field :essay_question, value: @essay_question, class: "form-control", required: true %>
     </div>
     <div class="mb-4">
       <%= f.label :your_paragraph, class: "form-label" %>
-      <%= f.text_area :your_paragraph, value: @your_paragraph, class: "form-control", rows:"5" %>
+      <%= f.text_area :your_paragraph, value: @your_paragraph, class: "form-control", rows:"5", required: true %>
+    </div>
+    <div class="mb-4">
+      <%= f.label :email_address, class: "form-label" %>
+      <%= f.text_field :email_address, value: @email_address, class: "form-control", required: true %>
     </div>
     <%= f.submit "Submit", class: "btn btn-primary", id: "chatgpt-btn"%>
     <button class="btn btn-primary d-none" type="button" disabled id="chatgpt-loader">
