update info on email

--- a/app/views/openai_mailer/send_response.html.erb
+++ b/app/views/openai_mailer/send_response.html.erb
@@ -2,21 +2,36 @@
   body {
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
   }
-  .py-1 {
-    padding: 3px 0;
-  }
-  </style>
-<div class="pt-3">
-<% if @suggestions.present? %>
-  <hr/>
-  <h4>Suggestions:</h4>
+</style>
 
-  <ol>
-    <% @suggestions.each do |suggestion| %>
-      <li class="py-1"><%= suggestion %></li>
-    <% end %>
-  </ol>
-<% else %>
-  <h4>Something went wrong, we couldn't get the suggestions</h4>
-<% end %>
+<div class="pt-3">
+
+  <h3>Input fields</h3>
+
+  <h4 style="margin: 5px 0px;">Year Of Student:</h4>
+  <p style="margin: 0 0 20px 0;"><%= @year_level %></p>
+
+  <h4 style="margin: 5px 0px;">Type Of Paragraph:</h4>
+  <p style="margin: 0 0 20px 0;"><%= @type_of_paragraph %></p>
+
+  <h4 style="margin: 5px 0px;">Type Of Essay:</h4>
+  <p style="margin: 0 0 20px 0;"><%= @essay_type %></p>
+
+  <h4 style="margin: 5px 0px;">Essay Question:</h4>
+  <p style="margin: 0 0 20px 0;"><%= @essay_question %></p>
+
+  <h4 style="margin: 5px 0px;">Paragraph:</h4>
+  <p style="margin: 0 0 20px 0;"><%= @your_paragraph %></p>
+
+  <hr/>
+  <h3>Suggestions:</h3>
+  <% if @suggestions.present? %>
+    <ol>
+      <% @suggestions.each do |suggestion| %>
+        <li style="padding: 3px 0;"><%= suggestion %></li>
+      <% end %>
+    </ol>
+  <% else %>
+    <h4>Something went wrong, we couldn't get the suggestions</h4>
+  <% end %>
 <div>
